# aoc

./: .gitignore  aoc.cabal  flake.nix  template.roc
2021/: 1.hs  2.2.py  2.hs  3.2.py  3.2b.py  3.2c.py  3.hs  4.hs  5.hs  6.hs  7.hs  9.hs
2022/: 1.hs  1.roc  2.hs  2.roc  3.hs  3.roc  4.hs  5.hs  6.hs  7.hs  8.hs
2023/: 1.hs
2024/: 1.roc  2.roc  3.roc
2025/: 1a.nu  1b.nu  2a.nu  2b.nu  3a.nu  3b.nu
