cabal-version:      3.4
name:               aoc
version:            0.1.0.0
license:            NONE
author:             Paul Joubert
maintainer:         paul@trespaul.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   .
    default-language: GHC2021
    build-depends:
        base,
        text,
        unliftio,
        utility-ht,
        split
